--- a/.env
+++ b/.env
@@ -5,6 +5,6 @@ NEXTAUTH_SECRET=thisIsSuperSecret!
 
 
 
-GITHUB_CLIENT_ID=c5cc2bc4483718fe84eb
+GITHUB_CLIENT_ID=*******
 
-GITHUB_CLIENT_SECRET=7b7a635f3e37da07f624861362d30ce204c370c1
+GITHUB_CLIENT_SECRET=*********
